# Psychic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Psychic/: CMakeLists.txt  Psychic.cpp  Psychic.h  draw.cpp  draw.h  scene.cpp  scene.h  settings.cpp  settings.h  test.cpp  test.h
Psychic/tests/: crash.cpp  domino.cpp  move.cpp
